test/sema/positive/ptr.impala
fn main() -> ~int {
    let p = ~~42;
    *p
}
