test/sema/negative/movesema/while_move.impala
fn f() -> () {
    let a = ~12;
    while *a > 0 {
        let b = a;
    }
}
